# TP2-Concu

./: CMakeLists.txt  Cliente.cpp  Cliente.h  Clima.cpp  Clima.h  EstadoDelClima.cpp  EstadoDelClima.h  EstadoDelClimaSerializer.cpp  EstadoDelClimaSerializer.h  Identificadores.h  Queue.cpp  Queue.h  Servidor.cpp  cerrate.cpp  cliente.cpp  main.cpp  servidor.cpp
src/: Cliente.cpp  Identificadores.h  Servidor.h  main.cpp
